(lib/text/news)
			   THE tbaMUD HERALD
   		 "We addict players for their own enjoyment."

NEW COMMANDS AND NEW MUD BEHAVIOR:
---------------------------------
**  Check out the latest news and information on the tbaMUD codebase at
    @Chttp://tbamud.com@n.

**  A new "areas" command will list open areas and their suggested levels. 

**  New preference editor for players: prefedit. Use it to enable two new
    toggles autodoor and autokey.

**  Your prompt will now show (news) and (motd) whenever these files
    have been updated.

**  Added a new command to cancel all pending (queued) commands. For example
    a fighting player that has spammed 10 kick or spell commands can type
    '--' to cancel them all so they can instead flee.

**  New automap shows a small ascii map to the right of room descriptions.
    Toggle automap on to enable. There is also a new map command that can
    show a larger map area.

**  New Quest Editor means more quests for players.

**  Doors are now visible in the exits menu. i.e. Exits: n (e) w s.

**  Added questpoints so be sure to ask about quests.

**  Added furniture for your MUDding comfort.

**  You will now be immediately notified when you have new mail, when coming
    back from AFK and reconnecting.

**  New toggles: autoloot, autogold, autosplit, autosac, and autoassist.

**  Improved toggle command allowing more options.

**  You can now use the history command to see a log of all channels.

**  Your mail will now be saved so you will not lose it when you log off.

**  NEW AFK toggle that displays in your prompt, under who, and when people
    look at the room.

**  You now have over 180 stock zones to play.

**  You can now interact with rooms, mobs, and objects through triggers.

**  Multiple objects will now be stacked and preceeded by a quantity so your 
    inventory won't be as long. i.e. (3) A waybread.

**  Over 100 new socials, and the gemote command to use socials over the gossip