@@ -6,17 +6,17 @@ Clas: 2
 Levl: 1
 Id  : 2
 Brth: 1418440218
-Plyd: 5818
-Last: 1419186810
+Plyd: 7111
+Last: 1419203902
 Lmot: 1418568942
-Lnew: 1418521940
-Host: localhost
+Lnew: 1419193275
+Host: 50.102.36.24
 Hite: 186
 Wate: 162
 Act : h 0 0 0
 Aff : 0 0 0 0
 Pref: efghnozA 0 0 0
-Room: 3000
+Room: 3041
 Lern: 1
 Hit : 20/20
 Mana: 100/100
